[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprite/ScreenBackground.png" type="Texture" id=1]
[ext_resource path="res://scenes/InsertCurrentYear.gd" type="Script" id=2]
[ext_resource path="res://scenes/TextBoxIO.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Silver.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[node name="InsertCurrentYear" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="2020" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.5
margin_top = -27.0
margin_right = 243.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "2020"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBoxIO" parent="." instance=ExtResource( 3 )]

[node name="Instruct" type="Label" parent="TextBoxIO"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -348.5
margin_top = -105.572
margin_right = 348.5
margin_bottom = -51.5723
custom_fonts/font = SubResource( 1 )
text = "P L E A S E   I N S E R T   C U R R E N T  Y E A R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startTimer" type="Timer" parent="."]
one_shot = true

[node name="endTimer" type="Timer" parent="."]
one_shot = true

[node name="changeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="timeout" from="endTimer" to="." method="_on_endTimer_timeout"]
[connection signal="timeout" from="changeTimer" to="." method="_on_changeTimer_timeout"]
